// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Diagnostics /> should handle error on loading reports 1`] = `
<div>
  <h1>
    Diagnostics
  </h1>
  <p>
    Generate a diagnostics report to simplify debugging some problems related to the router's functionality.
  </p>
  <h3>
    Modules
  </h3>
  <p>
    Select modules which you want to include in the report.
  </p>
  <form
    class="col-sm-12 offset-lg-1 col-lg-10"
  >
    <div
      style="font-weight: bold;"
    >
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Select all
          </label>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              class="custom-control-input"
              id="2"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="2"
            >
              foobar_module
            </label>
          </div>
        </div>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      disabled=""
      type="submit"
    >
       
       
      Generate report
    </button>
  </form>
  <h3
    class="mt-3"
  >
    Reports
  </h3>
  <p
    class="text-center text-danger"
  >
    An error occurred during loading reports
  </p>
</div>
`;

exports[`<Diagnostics /> should reload reports table when new report is generated 1`] = `
<div>
  <h1>
    Diagnostics
  </h1>
  <p>
    Generate a diagnostics report to simplify debugging some problems related to the router's functionality.
  </p>
  <h3>
    Modules
  </h3>
  <p>
    Select modules which you want to include in the report.
  </p>
  <form
    class="col-sm-12 offset-lg-1 col-lg-10"
  >
    <div
      style="font-weight: bold;"
    >
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Select all
          </label>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              class="custom-control-input"
              id="2"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="2"
            >
              foobar_module
            </label>
          </div>
        </div>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      type="submit"
    >
       
       
      Generate report
    </button>
  </form>
  <h3
    class="mt-3"
  >
    Reports
  </h3>
  <table
    class="table table-hover"
    data-testid="reports-table"
  >
    <tbody>
      <tr>
        <th
          scope="col"
        >
          ID
        </th>
        <th
          aria-label="Download"
          scope="col"
        />
        <th
          aria-label="Delete"
          scope="col"
        />
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          1234
        </td>
        <td
          class="text-center"
        >
          <a
            class="btn btn-primary"
            download=""
            href="/reforis/diagnostics/api/reports/1234/contents"
          >
            Download
          </a>
        </td>
        <td
          class="text-right"
        >
          <button
            class="btn btn-danger"
            type="button"
          >
             
             
            Delete
          </button>
        </td>
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          5678
        </td>
        <td
          class="text-center"
        >
          <a
            class="btn btn-primary"
            download=""
            href="/reforis/diagnostics/api/reports/5678/contents"
          >
            Download
          </a>
        </td>
        <td
          class="text-right"
        >
          <button
            class="btn btn-danger"
            type="button"
          >
             
             
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Diagnostics /> should render modules and reports 1`] = `
<div>
  <h1>
    Diagnostics
  </h1>
  <p>
    Generate a diagnostics report to simplify debugging some problems related to the router's functionality.
  </p>
  <h3>
    Modules
  </h3>
  <p>
    Select modules which you want to include in the report.
  </p>
  <form
    class="col-sm-12 offset-lg-1 col-lg-10"
  >
    <div
      style="font-weight: bold;"
    >
      <div
        class="form-group"
      >
        <div
          class="custom-control custom-checkbox "
        >
          <input
            class="custom-control-input"
            id="1"
            type="checkbox"
          />
          <label
            class="custom-control-label"
            for="1"
          >
            Select all
          </label>
        </div>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-sm-12 col-md-6 col-lg-4"
      >
        <div
          class="form-group"
        >
          <div
            class="custom-control custom-checkbox "
          >
            <input
              class="custom-control-input"
              id="2"
              type="checkbox"
            />
            <label
              class="custom-control-label"
              for="2"
            >
              foobar_module
            </label>
          </div>
        </div>
      </div>
    </div>
    <button
      class="btn btn-primary  offset-lg-8 col-lg-3 col-sm-12"
      disabled=""
      type="submit"
    >
       
       
      Generate report
    </button>
  </form>
  <h3
    class="mt-3"
  >
    Reports
  </h3>
  <table
    class="table table-hover"
    data-testid="reports-table"
  >
    <tbody>
      <tr>
        <th
          scope="col"
        >
          ID
        </th>
        <th
          aria-label="Download"
          scope="col"
        />
        <th
          aria-label="Delete"
          scope="col"
        />
      </tr>
      <tr>
        <td
          class="align-middle"
        >
          1234
        </td>
        <td
          class="text-center"
        >
          <a
            class="btn btn-primary"
            download=""
            href="/reforis/diagnostics/api/reports/1234/contents"
          >
            Download
          </a>
        </td>
        <td
          class="text-right"
        >
          <button
            class="btn btn-danger"
            type="button"
          >
             
             
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
